# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  railway.json
.github/workflows/: my_workflow.yml
page_analyzer/: app.py  html_parser.py  url_repository.py  url_validator.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
