[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a website that analyzes pages for SEO readiness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "validators>=0.35.0",
]
[project.scripts]
page-analyzer = "page_analyzer.app:app"
[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
